# gmail-mcp-server

./: .gitignore  debug.bat  pyproject.toml  pytest.ini
src/gmail/: cloud_auth.py  server.py
tests/integration/: test_server_integration.py
tests/test_gmail/: test_server.py
