[project]
name = "gmail-mcp-server"
version = "0.1.0"
requires-python = ">=3.12"
description = "A simple MCP server for interacting with the Gmail API."
authors = [{ name = "You", email = "you@example.com" }]
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "fastmcp",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
cloud = [
    "google-api-python-client",
    "google-cloud-secret-manager>=2.16.0",  # For cloud secret management
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail"]

[project.scripts]
gmail = "gmail.server:main"
